--- a/GMOPortfolio/Portfolio.html
+++ b/GMOPortfolio/Portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-    <!--背景外のcss-->
+    <!--背景以外のcss-->
     <link rel="stylesheet" type="text/css" href="./css/Port.css">
     <!--背景・タイトル担当css-->
     <link rel="stylesheet" type="text/css" href="./css/Folio.css">
