--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -19,6 +19,10 @@
     <!--id=mi内のボタンを推したら画面内遷移するjquery-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js", integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+
+    <!--ロゴの記載-->
+    <link rel="icon" type="image/x-icon" href="./image/logo1.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./image/logo1.png">
 </head>
 <!--headerの記述開始-->
 <header>
